fix weird extra margin on buttons on Safari iPad

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -52,6 +52,7 @@ button {
   background: none;
   border: none;
   padding: 0;
+  margin: 0;
   color: inherit;
   font: inherit;
   outline: inherit;
